--- a/src/pre/index.pug
+++ b/src/pre/index.pug
@@ -1,21 +1,5 @@
-doctype html
-html(lang="es")
-	head
-		meta(charset="UTF-8")
-		meta(http-equiv="X-UA-Compatible", content="IE=edge")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		//- 152
-		meta(name="description" content="Profesionales de la belleza con más 30 años de experiencia. Ofrecemos una amplia variedad de servicios para el cuidado del cabello. Si vives en Cancún ¡Ven y Conócenos!")
-		title Salón Rizo Cancún - Salón de belleza en Cancún
-		link(id="pageIcon" rel="shortcut icon" href="../img/pageIcon.png")
-		//- load font
-		link(rel="preload" as="font" href="../fonts/montserrat-regular/montserrat-v15-latin-regular.woff2" crossorigin)
-		link(rel="preload" as="font" href="../fonts/montserrat-500/montserrat-v15-latin-500.woff2" crossorigin)
-		link(rel="preload" as="font" href="../fonts/sanchez/sanchez-v8-latin-regular.woff2" crossorigin)
-		//- load font
 	body#body
 		//- mixins
-		include pug/_svgs
 		include pug/_services
 		//- pug variables
 		//- links
@@ -26,37 +10,39 @@ html(lang="es")
 			mapLink = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.3675131930645!2d-86.85313818523478!3d21.137767785939342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b979576d535%3A0x84e5ae6be2399083!2sAv.%20la%20Luna%20%26%20Calle%20Ek%20Balam%2C%20504%2C%2077533%20Canc%C3%BAn%2C%20Q.R.!5e0!3m2!1ses-419!2smx!4v1616392291900!5m2!1ses-419!2smx"
 			mapGoogleLink ="https://www.google.com/maps/place/Av.+la+Luna+%26+Calle+Ek+Balam,+504,+77533+Canc%C3%BAn,+Q.R./@21.137768,-86.85095,15z/data=!4m2!3m1!1s0x8f4c2b979576d535:0x84e5ae6be2399083?hl=es-419&gl=MX"
 		//- loader
-		#loader 
-			#loaderContainer
-				.loaderCircle
-				.loaderCircle
-				.loaderCircle
 		//- loader
 		//-	up arrow
 		a#upArrow(href="#principal")
-			+arrowToTop()
+			img(src="../assets/img/svgArrowPrincipal.svg", alt="")
 		//-	up arrow
 		//- principal
 		#logo
-			img(src="../img/logo.png", alt="") 
+			img(src="../assets/img/logo.png", alt="") 
 		.menu 
 			#menuIcon
 				.menuLine
 				.menuLine
 				.menuLine
-			a(href=whatsappLink target="blank_" aria-label="whatsapp"): +whatsappIcon()
-			a(href=facebookLink target="blank_" aria-label="facebook"): +facebookIcon()
-			a(href=instagramLink target="blank_" aria-label="instragram"): +instagramIcon()
+			a(href=whatsappLink target="blank_" aria-label="whatsapp icon") 
+				img(src="../assets/img/svgWhatsapp.svg", alt="whatsapp icon")
+			a(href=facebookLink target="blank_" aria-label="facebook icon") 
+				img(src="../assets/img/svgFacebook.svg", alt="facebook icon")
+			a(href=instagramLink target="blank_" aria-label="instragram icon") 
+				img(src="../assets/img/svgInstagram.svg" alt="instragram icon")
 			.menuArrow
-				a(href="#servicios"): +arrowPrincipal()
+				a(href="#servicios")
+					img(src="../assets/img/svgArrowPrincipal.svg", alt="arrow to bottom")
 			ul#menuDisplay
 				li: a.menuDisplayLink(href="#servicios") SERVICIOS
 				li: a.menuDisplayLink(href="#galeria") GALERÍA
 				li: a.menuDisplayLink(href="#ubicacion") UBICACIÓN
 				ul
-					li: a(href=whatsappLink target="blank_"): +whatsappIcon()
-					li: a(href=facebookLink target="blank_"): +facebookIcon()
-					li: a(href=instagramLink target="blank_"): +instagramIcon()
+					li: a(href=whatsappLink target="blank_") 
+						img(src="../assets/img/svgWhatsapp.svg", alt="whatsapp icon")
+					li: a(href=facebookLink target="blank_")
+						img(src="../assets/img/svgFacebook.svg", alt="facebook icon")
+					li: a(href=instagramLink target="blank_") 
+						img(src="../assets/img/svgFacebook.svg", alt="facebook icon")
 		#principal.principal
 			ul 
 				li.slide
@@ -76,27 +62,27 @@ html(lang="es")
 						"Bótox capilar",
 						"Bótox capilar",
 						"Es un tipo de tratamiento intensivo que hidrata y le da brillo al cabello, dejándolo más bonito, un poco más liso, sin frizz. Este producto ayuda a nutrir el cabello con proteínas y vitaminas haciendo que se hidrate y sea menos quebradizo",
-						"../img/serviciosBotox.jpg")
+						"../assets/img/serviciosBotox.jpg")
 					+service("cirugia",
 						"Cirugía capilar",
 						"Cirugía capilar",
 						"En el tratamiento de la cirugía capilar  nos aplican sobre el cabello una serie de ácidos grasos que se extraen de la nuez moscada y que hidratan el cabello en profundidad.",
-						"../img/serviciosCirugia.jpg")
+						"../assets/img/serviciosCirugia.jpg")
 					+service("keratina",
 						"Keratina",
 						"Keratina",
 						"La keratina es una proteína que genera nuestro cuerpo. Sin embargo, al producir muy poca cantidad y tener una estructura muy resistente el cabello necesita más cantidad que podrás aportarle a través de los tratamientos de keratina, que ayudarán a reparar y nutrir tu cabello de raíz a las puntas.",
-						"../img/serviciosKeratina.jpg")
+						"../assets/img/serviciosKeratina.jpg")
 					+service("nanoplastia",
 						"Nanoplastia",
 						"Nanoplastia",
 						"Reconstruye el cabello, quita el escrespamiento, hidrata y alisa de forma natural por un período de tiempo prolongado , y es progresivo pues, pasado el tiempo, el pelo volverá a su estado original de una forma progresiva y natural.",
-						"../img/serviciosNanoplastia.jpg")
+						"../assets/img/serviciosNanoplastia.jpg")
 					+service("alaciado",
 						"Alaciado japonés",
 						"Alaciado japonés",
 						"El alisado japonés, alisado Yuko o alaciado japonés es un tratamiento de belleza capilar que consiste en estirar el cabello a través del uso de productos capilares, en conjunto con un abundante nivel de calor para cambiar la estructura capilar.",
-						"../img/serviciosAlaciadojapones.jpg")
+						"../assets/img/serviciosAlaciadojapones.jpg")
 				.btnSpace: b#serviciosBtn.btn Más servicios
 		//- servicios
 		//- galeria
@@ -106,17 +92,17 @@ html(lang="es")
 			#galeriaContainer
 			#galeriaModal
 				#galeriaModalClose
-					+closeSvg("galeriaClose")
+					img(src="../assets/img/svgClose.svg", alt="close icon")
 				#galeriaModalContent
 					#galeriaModalLoader
 				#galeriaModalControl
 					#galeriaArrowCL
-						+MleftArrow
+						img(src="../assets/img/svgMleftArrow.svg", alt="arrow icon")
 					.galeriaCount
 						span#galeriaActualImg
 						span#galeriaTotalImg
 					#galeriaArrowCR
-						+MrightArrow
+						img(src="../assets/img/svgMrightArrow.svg", alt="arrow icon")
 			.btnSpace: b#galeriaButton.btn Ver más
 		//- galeria
 		//- ubicacion
@@ -131,8 +117,11 @@ html(lang="es")
 		//- footer
 		.section#footer 
 			.footerSocialMedia
-				a(href=whatsappLink target="blank_" aria-label="whatsapp"): +whatsappIcon()
-				a(href=facebookLink target="blank_" aria-label="facebook"): +facebookIcon()
-				a(href=instagramLink target="blank_" aria-label="instagram"): +instagramIcon()
+				a(href=whatsappLink target="blank_" aria-label="whatsapp")
+					img(src="../assets/img/svgWhatsapp.svg", alt="whatsapp icon")
+				a(href=facebookLink target="blank_" aria-label="facebook")
+					img(src="../assets/img/svgFacebook.svg", alt="facebook icon")
+				a(href=instagramLink target="blank_" aria-label="instagram")
+					img(src="../assets/img/svgInstagram.svg", alt="instagram icon")
 			a(href="tel:+529981723215"): h4 99-81-72-32-15	
 		//- footer
