--- a/src/components/nav/nav.pug
+++ b/src/components/nav/nav.pug
@@ -10,7 +10,7 @@ include ../social-media/social-media
 			hash: "#galeria"
 		},	
 		{
-			name: "Prodcutos",
+			name: "Productos",
 			hash: "#productos"
 		},	
 		{
