--- a/src/index.pug
+++ b/src/index.pug
@@ -3,9 +3,12 @@ include ./components/head
 include ./components/loader/loader
 include ./components/arrow-top/arrow-top
 include ./components/hero/hero
+include ./components/section-container/section-container
+
+//- erase height from body!!!!!!!!!!
 //- index.html
-//- erase height from body
 +head() 
 	+loader()
 	+arrow-top()
 	+hero()
+	+section-container()
