--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,6 @@
 @import "components/logo/logo";
 @import "components/nav/nav";
 @import "components/background-slider/background-slider";
+@import "components/section-container/section-container";
+@import "components/servicios/servicios";
+@import "components/button/button"
