--- a/src/components/hero/hero.pug
+++ b/src/components/hero/hero.pug
@@ -12,5 +12,5 @@ mixin hero()
 				span.hero__first-letter +
 				span.hero__text de 30 años de 
 					span.hero__hightlight experiencia
-		.hero__arrow-container
+		a(href="#servicios").hero__arrow-container
 			img.hero__arrow(src="./media/img/svg-hero-arrow.svg", alt="")
