--- a/src/components/section-container/section-container.pug
+++ b/src/components/section-container/section-container.pug
@@ -1,7 +1,9 @@
 include ../servicios/servicios
+include ../footer/footer
+include ../ubicacion/ubicacion
 
 mixin section-container()
 	.section-container 
 		+servicios("section-container__servicios","section-container__title","section-container__button-container","section-container__button")
-		//- +ubicacion()
-		//- +footer()
+		+ubicacion()
+		+footer()
