--- a/src/components/servicios/servicios.pug
+++ b/src/components/servicios/servicios.pug
@@ -46,5 +46,5 @@ mixin servicios(classes, title_class, button_container_class, button_class)
 					.servicios__information 
 						p.servicios__description=service.information 
 						img.servicios__image(src=service.image, alt="")
-		+button("servicios__button")
+		+button("servicios__button", "Más servicios")
 
