--- a/src/index.scss
+++ b/src/index.scss
@@ -13,4 +13,8 @@
 @import "components/background-slider/background-slider";
 @import "components/section-container/section-container";
 @import "components/servicios/servicios";
-@import "components/button/button"
+@import "components/button/button";
+
+
+
+@import "components/footer/footer"
