--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,3 +1,3 @@
-mixin button(classes)
+mixin button(classes, text)
 	div(class=`button ${classes}`)
-		button(class=`button__button`) Más servicios
+		button(class=`button__button`)=text
