--- a/src/components/head.pug
+++ b/src/components/head.pug
@@ -15,5 +15,5 @@ mixin head()
 			link(rel="preload" as="font" href="media/fonts/montserrat-regular/montserrat-v15-latin-regular.woff2" crossorigin)
 			link(rel="preload" as="font" href="media/fonts/montserrat-500/montserrat-v15-latin-500.woff2" crossorigin)
 			link(rel="preload" as="font" href="media/fonts/sanchez/sanchez-v8-latin-regular.woff2" crossorigin)
-		body(style="height:10000px;background-color:lightpink")
+		body
 			block 
