--- a/src/components/servicios/servicios.pug
+++ b/src/components/servicios/servicios.pug
@@ -34,7 +34,7 @@ include ../button/button
 		}
 	] 
 
-mixin servicios(classes, title_class, button_container_class, button_class)
+mixin servicios(classes, title_class)
 	section#servicios(class=`servicios ${classes}`)
 		h2(class=`servicios__title ${title_class}`) Servicios
 		.servicios__content
