--- a/src/components/social-media-links.pug
+++ b/src/components/social-media-links.pug
@@ -1,6 +1,8 @@
 -
 	var link = {
-		whatsapp: "https://api.whatsapp.com/send?phone=529984034867&text=Hola%2C%20me%20gustar%C3%ADa%20tener%20m%C3%A1s%20informaci%C3%B3n.",
+		whatsapp: "https://api.whatsapp.com/send?phone=529981723215",
 		facebook: "https://www.facebook.com/Sal%C3%B3n-Rizo-Canc%C3%BAn-436441746515339",
-		instagram: "https://www.instagram.com/salonrizocancun/"
+		instagram: "https://www.instagram.com/salonrizocancun/",
+		iframe_map_link: "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14885.467550266632!2d-86.8507945!3d21.1377927!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2cdefb8fb2c4a06d!2sSalon%20Rizo!5e0!3m2!1ses-419!2smx!4v1625017414813!5m2!1ses-419!2smx",
+		map_link:"https://goo.gl/maps/wrW6J1MnypvGKB3o8"
 	}
