--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -29,6 +29,11 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		transition: transform .3s;
+
+		&:hover {
+			transform: scale(1.05);
+		}
 	}
 
 	&__phone-img {
