--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -15,6 +15,20 @@ a {
 	color: black;
 }
 
+html::-webkit-scrollbar {
+	width: .5rem;
+	background-color: $clr-bas-1000;
+	
+}
+
+html::-webkit-scrollbar-thumb {
+	background-color: $clr-prin-100;
+	border-radius: .2rem;
+	box-shadow: inset 0 0 6px rgb(0 0 0 / 50%);
+}
+
+
+
 // responsive media queries
 // xs <576px
 @media (min-width: $xs) {
