--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -4,5 +4,10 @@ mixin footer()
 	.footer 
 		+social-media("footer__social-media")
 		.footer__phone-container
-			a.footer__phone(href="tel:+529981723215") Da click para llamar
+			a.footer__phone-button(href="tel:+529984034867") Da click para llamar
 				img.footer__phone-img(src="./media/img/svg-phone.svg", alt="")
+		.footer__post-footer
+			p.footer__section Cancún -&nbsp;
+				a.footer__link(href="tel:+529984034867") 9984034867
+			p.footer__section Created by &nbsp;
+				a.footer__link(href="https://salonrizo.com/tools/axelrizo/") Axel Rizo
