--- a/src/components/nav/nav.pug
+++ b/src/components/nav/nav.pug
@@ -9,10 +9,10 @@ include ../social-media/social-media
 			name: "Galería",
 			hash: "#galeria"
 		},	
-		{
-			name: "Productos",
-			hash: "#productos"
-		},	
+		//- {
+		//- 	name: "Productos",
+		//- 	hash: "#productos"
+		//- },	
 		{
 			name: "Ubicación",
 			hash: "#ubicacion"
