--- a/src/components/ubicacion/ubicacion.pug
+++ b/src/components/ubicacion/ubicacion.pug
@@ -7,5 +7,5 @@ mixin ubicacion(classes, tittle_class)
 		h3.ubicacion__address Av. La luna esq Ek-Balam 
 		iframe.ubicacion__map(src=link.iframe_map_link title="Salon Rizo's ubication, google maps" allowfullscreen="true" loading="lazy")
 		.ubicacion__button-container
-			a.ubicacion__link(href=link.map_link) Abrir en Google Maps
+			a.ubicacion__link(href=link.map_link target="_blank") Abrir en Google Maps
 
