--- a/src/components/arrow-top/arrow-top.scss
+++ b/src/components/arrow-top/arrow-top.scss
@@ -1,12 +1,12 @@
 @import "../variables";
 
 .arrow-top {
-
-	width: 2rem;
-	height: 2rem;
-	background-color: $clr-prin-100;
-	bottom: 0.5rem;
-	right: 0.5rem;
+	box-shadow: rgb(0 0 0 / 15%) 0px 4px 12px 0px;
+	width: 3rem;
+	height: 3rem;
+	background-color: $clr-prin-200;
+	top: 24px;
+	left: 24px;
 	z-index: 1000;
 	border-radius: 10%;
 	position: fixed;
@@ -26,7 +26,7 @@
 
 	&--active {
 		visibility: visible;
-		opacity: 0.7;
+		opacity: 1;
 	}
 
 	&__image {
