--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -14,10 +14,11 @@
 		border-radius: 1rem;
 		border: none;
 		cursor: pointer;
-		transition: transform .3s;
+		transition: transform .3s, box-shadow .3s;
 
 		&:hover {
 			transform: scale(1.05);
+			box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.49);
 		}
 	}
 }
