--- a/src/components/servicios/servicios.scss
+++ b/src/components/servicios/servicios.scss
@@ -31,10 +31,12 @@
 		border-radius: 30px;
 		padding: 1rem;
 		cursor: pointer;
-		transition: transform .3s;
+		transition: transform .3s,
+			box-shadow .3s;
 
 		&:hover {
 			transform: scale(1.005);
+			box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.49);
 		}
 	}
 
