--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,15 @@
 //- includes
 include ./components/head
 include ./components/loader/loader
+include ./components/messenger-plugin
 include ./components/arrow-top/arrow-top
 include ./components/hero/hero
 include ./components/section-container/section-container 
 
 //- index.html   
-+head()  
++head()    
 	+loader() 
+	+messenger-plugin()  
 	+arrow-top()
 	+hero()
 	+section-container()
