--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ include ./components/section-container/section-container
 //- index.html   
 +head()    
 	+loader() 
-	+messenger-plugin()  
+	//- +messenger-plugin()  
 	+arrow-top()
 	+hero()
 	+section-container()
