--- a/src/components/loader/loader.pug
+++ b/src/components/loader/loader.pug
@@ -1,5 +1,6 @@
 mixin loader()
 	.loader 
+		//- .loader__header-cover
 		.loader__container
 			.loader__circle.loader__circle--black
 			.loader__circle.loader__circle--red
