--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,21 @@
 // index.html
 
-@import "components/reset"; 
+@import "components/reset";
 @import "components/global";
 @import "components/fonts";
 @import "components/loader/loader";
+@import "components/messenger-plugin";
 @import "components/arrow-top/arrow-top";
 @import "components/hero/hero";
 @import "components/social-media/social-media";
 @import "components/header/header";
-@import "components/logo/logo"; 
+@import "components/logo/logo";
 @import "components/nav/nav";
 @import "components/background-slider/background-slider";
-@import "components/section-container/section-container"; 
+@import "components/section-container/section-container";
 @import "components/servicios/servicios";
 @import "components/button/button";
 @import "components/galeria/galeria";
+@import "components/modal/modal";
 @import "components/ubicacion/ubicacion";
-@import "components/footer/footer"; 
+@import "components/footer/footer";
